static/scss/module_modal_bp1.scss
.modal {

  .modal-close {
    font-size: rem(18);
    top: rem(16);
    right: rem(16);
  }

  .modal-share-view {
    height: rem(395);
    margin-top: rem(-197);
    text-align: center;
  }
}

.modal-share-actions {
  padding: 0;
  text-align: center;
  width: 100%;
}

.modal-share-buttons {
  .button {
    display: block;
    margin: 0 auto rem(10) auto;
  }

  .button-url {
    width: 100%;
  }
}

.modal-share-primary {
  font-size: rem(20);
  margin-bottom: rem(30);
}

.modal-share-secondary {
  font-size: rem(12);
  margin-bottom: rem(30);
}

.modal-instabinge {

  .modal-view-image {
    width: 100%;
  }  

  .modal-view-details {
    position: relative;
    left: auto;
  }

  .modal-wrap,
  .modal-wrap-row {
    display: block;
  }
  .modal-wrap {
    padding-top: rem(50);
  }
  .modal-wrap-row {
    overflow: auto;
    height: 100%;
  }

  .modal-view {
    background-color: $white;
  }
}

.modal-gallery {
  
  .modal-gallery-count {
    font-size: rem(15);
    top: rem(16);
  }

  .modal-gallery-thumbs {
    font-size: 20px;
    top: rem(16);
    left: rem(16);
  }
  .modal-gallery-caption {
     padding: 0;
  }
}

